--- a/avita.html
+++ b/avita.html
@@ -20,7 +20,8 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Avita</title>
-        <style type="text/css"></style>
+
+        <link rel="stylesheet" type="text/css" href="css/responsive.css">
     </head>
     <body>
         <header class="header">
@@ -58,7 +59,40 @@
                              </ul>
                         </nav>
                     </div>
-                </div>
+                    <div class="mobil-menu">
+                        <div class="menu-block">
+                        <input type="checkbox" id="toggle" class="toggle">
+                        <label class="ib" for="toggle"><i class="fas fa-bars"></i></label>
+                        
+                      <div class="toggle-menu">
+                           <nav>
+                             <ul>
+                                 <li class="active">
+                                     <a href="#0">Home</a>
+                                 </li>
+                                 <li>
+                                     <a href="#0">About</a>
+                                 </li>
+                                 <li>
+                                     <a href="#0">Services</a>
+                                 </li>
+                                 <li>
+                                     <a href="#0">Portfolio</a>
+                                 </li>
+                                 <li>
+                                     <a href="#0">Testimonial</a>
+                                 </li>
+                                 <li>
+                                     <a href="#0">Blog</a>
+                                 </li>
+                                 <li>
+                                     <a href="#0">Contact</a>
+                                 </li>
+                             </ul>
+                        </nav>
+                      </div>
+                      </div>
+                </div>            
             </div>
         </header>
         <section class="welcome-area">
@@ -252,7 +286,8 @@
                             <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt.</p>
                             <a href="#0" class="btn-style hire-btn">HIRE ME</a>
                         </div>
-                        <div class="personal-detail-right side">
+                            <div class="personal-detail-right side ">
+                        <div class="detail-overlay-2">
                             <div class="detail-content-area padding-style2">
                                 <div class="detail-header">
                                     <p class="title-small">SEE MY DETAILS</p>
@@ -301,6 +336,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -530,7 +566,7 @@
                                  <p class="adress">
                                      <i class="fa fa-map-marker"></i>
                                      <span>Address:</span>
-                                     <span class="adress-loc">10,Park Strgfyguhijeet,London,UK.</span>
+                                     <span class="adress-loc">10,Park ,London,UK.</span>
                                  </p>
                                  <p class="phone">
                                      <i class="fa fa-phone"></i>
